--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -6,7 +6,7 @@
         <%= f.input :address, placeholder: "Shanghai" %>
         <%= f.input :name, hint: "If you don't know the name, add the description" %>
         <%= f.input :healthiness %>
-        <%= f.submit %>
+        <%= f.submit "Add Pet", class: "btn btn-primary" %>
       <% end %>
     </div>
   </div>
